--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -93,7 +93,9 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BallProperties.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="PongScene.cpp" />
     <ClCompile Include="RacketProperties.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="TestScene.cpp" />
@@ -101,7 +103,9 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="BallProperties.h" />
+    <ClInclude Include="MenuScene.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PongScene.h" />
     <ClInclude Include="RacketProperties.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="TestScene.h" />
