--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -91,21 +91,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="BallProperties.cpp" />
+    <ClCompile Include="CollisionResponse.cpp" />
+    <ClCompile Include="LinearResponse.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="PongScene.cpp" />
+    <ClCompile Include="Racket.cpp" />
     <ClCompile Include="RacketProperties.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="BallProperties.h" />
+    <ClInclude Include="CollisionResponse.h" />
+    <ClInclude Include="LinearResponse.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PongScene.h" />
+    <ClInclude Include="Racket.h" />
     <ClInclude Include="RacketProperties.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="TestScene.h" />
