Created TestHapticCollisionScene to test collision responses.

--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="Racket.cpp" />
     <ClCompile Include="RacketProperties.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="TestHapticCollisionScene.cpp" />
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -116,6 +117,7 @@
     <ClInclude Include="Racket.h" />
     <ClInclude Include="RacketProperties.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="TestHapticCollisionScene.h" />
     <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
