--- a/haptopong/chai3d_project.vcxproj.filters
+++ b/haptopong/chai3d_project.vcxproj.filters
@@ -94,11 +94,11 @@
     <ClCompile Include="ShadowlessMesh.cpp">
       <Filter>Pong</Filter>
     </ClCompile>
-    <ClCompile Include="BallEventManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="HapticResponseManager.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Pong</Filter>
+    </ClCompile>
+    <ClCompile Include="BallEventManager.cpp">
+      <Filter>Pong</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -168,11 +168,11 @@
     <ClInclude Include="ShadowlessMesh.h">
       <Filter>Pong</Filter>
     </ClInclude>
-    <ClInclude Include="BallEventManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="HapticResponseManager.h">
-      <Filter>Header Files</Filter>
+      <Filter>Pong</Filter>
+    </ClInclude>
+    <ClInclude Include="BallEventManager.h">
+      <Filter>Pong</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
